fix(app.css): remove visibility tag

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,3 @@
-#page {
-  visibility: visible !important;
-  }
-
 .App {
   background-color: var(--bg-color-offBlack);
 }
